bk_ida/gccida/c2/maybe_eliminate_biv
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv/src/loop.c:8981:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)v13->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv/src/loop.c:9023:23: error: use of undeclared identifier 'off_6FF833'
v19 = ( const char *)&off_6FF833; 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv/src/obj/loop.o] Error 1
